Fix size of main card on mobile

--- a/static/assets/css/main_retouched.css
+++ b/static/assets/css/main_retouched.css
@@ -3,5 +3,10 @@
 /* Main */
 /* I want the card to be almost full screen when viewing on mobile */
 #main {
-  min-width: 27em;
-}
+  min-width: 27em;}
+  
+@media only screen and (max-width: 768px) {
+  #main {
+    max-width: 100% !important;
+    transition: 0.4s;
+  }}
